--- a/exercise/src/main/resources/restExercise.properties
+++ b/exercise/src/main/resources/restExercise.properties
@@ -1,10 +1,10 @@
 # Dev Settings
 dev.debug=true
 dev.db.port=3306
-dev.db.location=127.0.0.1
+dev.db.location=localhost
 dev.jdbc.username=myUser
 dev.jdbc.password=
 dev.jdbc.database=restExercise
-dev.schema.auto=create-drop
+dev.schema.auto=create
 
 
