Fixed some errors

--- a/exercise/src/main/resources/restExercise.properties
+++ b/exercise/src/main/resources/restExercise.properties
@@ -2,7 +2,7 @@
 dev.debug=true
 dev.db.port=3306
 dev.db.location=localhost
-dev.jdbc.username=myUser
+dev.jdbc.username=root
 dev.jdbc.password=
 dev.jdbc.database=restExercise
 dev.schema.auto=create
