--- a/exercise/pom.xml
+++ b/exercise/pom.xml
@@ -90,9 +90,10 @@
           <url>http://localhost:8080/manager/text</url>
           <server>tomcat</server>
           <path>/restExercise</path>
+          <username>deli</username>
+          <password>123</password>
         </configuration>
       </plugin>
     </plugins>
-
   </build>
 </project>
