--- a/exercise/pom.xml
+++ b/exercise/pom.xml
@@ -64,7 +64,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>ExerciseApiWebApp</finalName>
+    <finalName>bookapi</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
